Mahesh and Deepika

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/*==================== BASE ====================*/
+/*==================== CSS - BASE ====================*/
 * {
   box-sizing: border-box;
 }
