Mahesh and Deepika

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-/*==================== CSS - BASE ====================*/
+/*CSS*/
+/*==================== BASE ====================*/
 * {
   box-sizing: border-box;
 }
