--- a/style.css
+++ b/style.css
@@ -88,8 +88,16 @@ body {
   border-radius: 10px;
   display: flex;
   flex-direction: column;
-  height: calc(100% - 72px);
+  height: 100%;
 }
+
+.chat-area {
+  flex: 1;
+  padding: 16px;
+  overflow-y: auto;
+  margin-bottom: 0px;
+}
+
 .chat-header {
   padding: 16px;
   border-bottom: 1px solid #f5f5f5;
@@ -106,11 +114,7 @@ body {
   background-size: 16px;
   font-size: 14px;
 }
-.chat-area {
-  flex: 1;
-  overflow-y: auto;
-  padding: 16px;
-}
+
 .profile-picture {
   border-radius: 8px;
   width: 32px;
@@ -212,7 +216,7 @@ body {
   padding: 8px;
   box-shadow: var(--navigation-box-shadow);
   background-color: var(--message-bg);
-  margin-top: 450px;
+  margin-top: 0px;
   position: sticky;
 }
 .chat-input {
