--- a/style.css
+++ b/style.css
@@ -413,3 +413,37 @@ body {
     height: 33.3%;
   }
 }
+
+/*==================== Vonage Video ====================*/
+body, html {
+  background-color: gray;
+  height: 100%;
+}
+
+#videos {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#subscriber {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+}
+
+#publisher {
+  position: absolute;
+  width: 900px;
+  height: 500px;
+  bottom: 10px;
+  left: 10px;
+  z-index: 100;
+  border: 3px solid white;
+  border-radius: 3px;
+}
