DEEPIKA AND MAHESH UI REHAUL

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
   margin: 0;
   padding: 0;
   overflow: hidden;
+  background-color: rgba(128,128,128,255);
 }
 button {
   outline: none;
@@ -25,7 +26,7 @@ a {
 /*==================== VARIABLES CS ====================*/
 
 body {
-  --app-background: #eaebf5;
+  --app-background: rgba(128,128,128,255)
   --chat-background: #fff;
   --link-color: #c0c1c5;
   --navigation-bg: #fff;
@@ -74,9 +75,11 @@ body {
   margin-left: auto;
   flex-basis: 400px;
   height: 100%;
-  padding: 16px;
+  padding: 0px;
+  padding-bottom: 27px;
   position: relative;
   transition: all 300ms cubic-bezier(0.19, 1, 0.56, 1);
+  background-color: rgba(128,128,128,255);
 }
 .right-side.show {
   display: block;
@@ -84,7 +87,7 @@ body {
 }
 /*==================== Chat ====================*/
 .chat-container {
-  background-color: maroon; /* Change chat container background color */
+  background-color: rgba(128,128,128,255); /* Change chat container background color */
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -99,17 +102,19 @@ body {
   padding-bottom: 0px;
   overflow-y: auto;
   margin-bottom: 0px;
+  margin-top: 0px;
   
-  background-color: #746869;
+  background-color: rgba(79,74,68,255);
 }
 
 .chat-header {
-  padding: 16px;
+  padding: 8px;
   border-bottom: 1px solid #f5f5f5;
+  background-color: #3d3834; 
 }
 .chat-header-button {
   background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 512 512' xmlns='http://www.w3.org/2000/svg' fill='%23fff'%3E%3Cpath d='M479.9 187.52l-90.19 68.53v-52.6a20 20 0 00-20-20H20a20 20 0 00-20 20V492a20 20 0 0020 20h349.71a20 20 0 0020-20v-52.6l90.18 68.52c13.05 9.91 32.1.67 32.1-15.92V203.45c0-16.5-18.94-25.92-32.1-15.93zM349.7 472H40V223.45h309.71zM472 451.68l-82.29-62.53V306.3L472 243.77zM87.96 79.24C129.62 28.88 190.86 0 256 0c65.13 0 126.37 28.88 168.03 79.24a20 20 0 01-30.82 25.5A177.6 177.6 0 00256 40a177.6 177.6 0 00-137.21 64.73 20 20 0 11-30.83-25.5zm240.36 32.21a20 20 0 11-21.02 34.03 97.57 97.57 0 00-51.3-14.53 97.6 97.6 0 00-51.31 14.53 20 20 0 11-21.02-34.03A137.53 137.53 0 01256 90.95c25.59 0 50.6 7.09 72.32 20.5zm0 0'/%3E%3C/svg%3E%0A");
-  background-color: gray;
+  background-color: #3d3834;
   padding: 12px 16px 12px 40px;
   border: none;
   border-radius: 4px;
@@ -217,9 +222,10 @@ body {
   display: block;
   padding-left: 0px;
   padding-right: 0px;
-  padding-bottom: 300px;
+  padding-bottom: 350px;
   padding-top: 5px;
   margin-bottom: 0px;
+  background-color: #3d3834; 
 }
 
 .chat-typing-area {
@@ -248,7 +254,7 @@ body {
 }
 .send-button {
   color: #fff;
-  background-color: maroon;
+  background-color: rgba(141,26,57,255);
   display: inline-block;
   border-radius: 8px;
   margin-right: 0px;
@@ -267,7 +273,7 @@ body {
 .app-main {
   flex: 1;
   width: 100%;
-  padding: 30px 32px 16px 32px;
+  padding: 10px 32px 10px 32px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -295,6 +301,7 @@ body {
 .btn-mute {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' stroke='%23fff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-mic-off' viewBox='0 0 24 24'%3E%3Cpath d='M1 1l22 22M9 9v3a3 3 0 005.12 2.12M15 9.34V4a3 3 0 00-5.94-.6'/%3E%3Cpath d='M17 16.95A7 7 0 015 12v-2m14 0v2a7 7 0 01-.11 1.23M12 19v4M8 23h8'/%3E%3C/svg%3E%0A");
   margin-right: 4px;
+  background-color: #feb8c8;
 }
 .btn-camera {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' stroke='%23fff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-camera-off' viewBox='0 0 24 24'%3E%3Cpath d='M1 1l22 22M21 21H3a2 2 0 01-2-2V8a2 2 0 012-2h3m3-3h6l2 3h4a2 2 0 012 2v9.34m-7.72-2.06a4 4 0 11-5.56-5.56'/%3E%3C/svg%3E%0A");
@@ -310,6 +317,7 @@ body {
 }
 .video-action-button {
   background-repeat: no-repeat;
+  background-color: #feb8c8;
   background-size: 24px;
   border: none;
   height: 48px;
@@ -324,24 +332,26 @@ body {
 .video-action-button.mic {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' stroke='%232c303a' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-mic-off' viewBox='0 0 24 24'%3E%3Cpath d='M1 1l22 22M9 9v3a3 3 0 005.12 2.12M15 9.34V4a3 3 0 00-5.94-.6'/%3E%3Cpath d='M17 16.95A7 7 0 015 12v-2m14 0v2a7 7 0 01-.11 1.23M12 19v4M8 23h8'/%3E%3C/svg%3E%0A");
   background-position: center;
-  background-color: maroon;
+  background-color: #feb8c8;
+  
 }
 .video-action-button.camera {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' stroke='%232c303a' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-camera-off' viewBox='0 0 24 24'%3E%3Cpath d='M1 1l22 22M21 21H3a2 2 0 01-2-2V8a2 2 0 012-2h3m3-3h6l2 3h4a2 2 0 012 2v9.34m-7.72-2.06a4 4 0 11-5.56-5.56'/%3E%3C/svg%3E%0A");
   background-position: center;
-  background-color: maroon;
+  background-color: #feb8c8;
 }
 
 .video-action-button.endcall {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23ff1932' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-phone-missed'%3E%3Cline x1='23' y1='1' x2='17' y2='7'/%3E%3Cline x1='17' y1='1' x2='23' y2='7'/%3E%3Cpath d='M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z'/%3E%3C/svg%3E");
   color: #ff1932;
-  background-color: maroon;
+  background-color: white;
   width: auto;
   font-size: 14px;
   padding-left: 42px;
   padding-right: 12px;
   background-size: 20px;
   background-position: center left 12px;
+  background-color: #feb8c8;
 }
 
 
@@ -405,7 +415,7 @@ body {
     display: none;
   }
   .app-main {
-    padding: 72px 16px 16px 16px;
+    padding: 50px 16px 16px 16px;
   }
   .expand-btn {
     right: 16px;
@@ -414,16 +424,19 @@ body {
     left: 16px;
   }
   
+  
   .video-action-button {
     width: 32px;
     height: 32px;
     background-size: 14px;
     margin: 0 4px;
+    background-color: #feb8c8;
   }
   .video-action-button.endcall {
     background-size: 14px;
     font-size: 12px;
     padding-left: 36px;
+    background-color: #feb8c8;
   }
 }
 /*==================== Devices Between 520px - 720px ====================*/
@@ -456,7 +469,7 @@ body, html {
   height: 100%;
   z-index: 10;
   padding-top: 0px;
-  size: ;
+  
 }
 
 #publisher {
@@ -477,8 +490,8 @@ body, html {
   justify-content: center;
   padding: 20px;
   border-radius: 0 0 10px 10px;
-  background-color: maroon;
-
+  background-color: rgba(141, 26, 57, 255);
+  margin: 0;
   color: white;
   font-size: 24px;
 }
@@ -492,6 +505,9 @@ body, html {
   color: white;
 
 }
+.meeting-time{
+  margin-left: 20px;
+}
 
 .app-container {
   position: relative;
@@ -499,56 +515,162 @@ body, html {
 }
 
 
-.video-call-wrapper {
-  /* Your existing styles for video-call-wrapper */
-}
-
-.right-side {
-  /* Your existing styles for right-side */
-}
-
-
-.chat-container {
-  background-color: maroon;
-  border-radius: 10px;
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
-  margin-bottom: 10px; /* Add margin to create space between the chat container and other content */
-}
 
 /* Style for the participants container */
 .participants-container {
-  background-color: var(--chat-background); /* Match the chat background color */
+  background-color: rgba(128, 128, 128, 255); /* Match the chat background color */
   border-radius: 10px;
   margin-top: 0px; /* Adjust the margin as needed */
   padding: 0px;
+  display: block;
+  border-bottom: 20px;
 }
 
 /* Style for the participants header */
 .participants-header {
   text-align: left;
-  margin-bottom: 3px; /* Adjust the margin as needed */
+  margin-bottom: 2px;
+  margin-left: 0px;
+  margin-top: 5px;
+  border-radius: 5px;
+  padding-top: 5px;
+  background-color: #3d3834;
+
+  /* Adjust the margin as needed */
 }
 
 .participants-header-button {
-  background-color: maroon;/* Change the background color of the button */
+  background-color: #3d3834; /* Change the background color of the button */
   color: white; /* Change the text color */
-  
+
   border: none;
   border-radius: 4px;
   font-size: 14px;
   cursor: pointer;
   outline: none;
   transition: 0.2s;
+  margin-left: 10px;
+  margin-bottom: 6px;
 }
-.participants-list{
-  background-color: gray;
+
+.participants-list {
+  background-color: rgba(98,93,87,255);
   padding-bottom: 150px;
-  margin-bottom: 10px;
+  margin-bottom: 5px;
+  border-radius: 10px;
 
 }
 
 .participants-header-button:hover {
   background-color: darkred; /* Change the background color on hover */
+}
+
+
+
+.top-left-icon {
+  position: absolute;
+  top: 20px; /* Adjust the top position as needed */
+  left: 60px; /* Adjust the left position as needed */
+  width: 40px; /* Adjust the width as needed */
+  height: 40px; /* Adjust the height as needed */
+  z-index: 100; /* Ensure it appears above other elements */
+  border-radius: 50px;
+
+}
+.vertical-line {
+  position: absolute;
+  top: 0px; /* Adjust the top position to align with the icon */
+  left: 180px; /* Adjust the left position to place the line between the icon and text */
+  width: 0.5px; /* Adjust the width as needed for the line thickness */
+  height: 90px; /* Extend the line to the bottom of the page */
+  background-color: white; /* Set the line color to white */
+  z-index: 99; /* Ensure it appears below the icon */
+}
+
+.vertical-line2{
+  position: absolute;
+  top: 0px; /* Adjust the top position to align with the icon */
+  left: 1080px; /* Adjust the left position to place the line between the icon and text */
+  width: 0.5px; /* Adjust the width as needed for the line thickness */
+  height: 90px; /* Extend the line to the bottom of the page */
+  background-color: white; /* Set the line color to white */
+  z-index: 99; /* Ensure it appears below the icon */
+}
+
+.person-info {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-left: 1100px; /* Adjust the left padding as needed for spacing */
+  color: white; /* Set the text color for the person's name and title */
+  z-index: 99; /* Ensure it appears below the icon and text */
+}
+
+
+.person-name {
+  font-size: 20px;
+  display: block; /* Adjust the font size as needed */
+}
+
+.person-title {
+  font-size: 12px; /* Adjust the font size as needed */
+ 
+}
+.profile-image {
+  width: 48px;
+  height: 48px;
+  margin-right: 10px;
+  border-radius: 50%; /* Creates a round shape for the image */
+  overflow: hidden;
+  background-color: rgba(141,26,57,255); /* Set a background color if the image is not available */
+}
+.profile-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.dots {
+  display: flex;
+  flex-direction: column; /* Display dots vertically */
+  /* Align the dots to the right */
+  padding-left: 1170px;
+  padding-top:5px;
+  position: absolute;
+  margin-left: 10px;
+  margin-right: 0px;
+  right: 0px; 
+  left: 100px;/* Adjust the right position as needed for spacing */
+  top: 0;
+
+}
+
+.dot {
+  width: 3px; /* Adjust the width of the dots */
+  height: 3px; /* Adjust the height of the dots */
+  background-color: white; /* Set the color of the dots */
+  border-radius: 50%; /* Makes the dots round */
+  margin: 2px;/* Adjust the vertical margin between the dots */
+}
+
+.first-participant {
+  font-size: 14px; /* Adjust the font size as needed */
+  padding: 8px;
+  border-top: 0px;
+  margin-left: 5px;
+  margin-top:6px;
+  padding-right: 300px; /* Adjust the padding for the participant item */
+  color: black; /* Set the text color for the participant name */
+  transition: 0.2s;
+  border-radius: 10px;
+  cursor: pointer;
+  text-align: center; /* Center the text horizontally */
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2); /* Add a bottom border to separate participants */
+  background-color: #fea0b2;
+
+}
+
+.first-participant:hover {
+  background-color: rgba(255, 255, 255, 0.1); /* Change background color on hover */
 }
