--- a/style.css
+++ b/style.css
@@ -72,12 +72,13 @@ body {
   transition: 0.2s ease-in;
 }
 .right-side {
-  margin-left: auto;
-  flex-basis: 400px;
+  
+  
   height: 100%;
   padding: 0px;
   padding-bottom: 27px;
-  position: relative;
+  padding-top: 0px;
+  
   transition: all 300ms cubic-bezier(0.19, 1, 0.56, 1);
   background-color: rgba(128,128,128,255);
 }
@@ -222,7 +223,7 @@ body {
   display: block;
   padding-left: 0px;
   padding-right: 0px;
-  padding-bottom: 350px;
+  padding-bottom: 300px;
   padding-top: 5px;
   margin-bottom: 0px;
   background-color: #3d3834; 
@@ -271,12 +272,13 @@ body {
 }
 /*==================== Main App ====================*/
 .app-main {
-  flex: 1;
+  flex: 1.5;
   width: 100%;
-  padding: 10px 32px 10px 32px;
+  padding: 10px 2px 10px 32px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  
 }
 .video-call-wrapper {
   width: 100%;
@@ -323,7 +325,7 @@ body {
   height: 48px;
   margin: 0 8px;
   box-shadow: var(--navigation-box-shadow);
-  border-radius: 8px;
+  border-radius: 50px;
   width: 48px;
   cursor: pointer;
   outline: none;
@@ -352,6 +354,60 @@ body {
   background-size: 20px;
   background-position: center left 12px;
   background-color: #feb8c8;
+}
+.video-record-button{
+  background-repeat: no-repeat;
+  background-color: #feb8c8;
+  background-size: 24px;
+  border: none;
+  height: 48px;
+  margin: 0 8px;
+  box-shadow: var(--navigation-box-shadow);
+  border-radius: 50px;
+  width: 48px;
+  cursor: pointer;
+  outline: none;
+  background-color: var(--button-bg);
+  background-image: url(/Users/deepikauppalapati/Desktop/VonageASU/icons/record.png);
+  background-position: center;
+  background-color: #feb8c8;
+}
+
+.share-screen-button{
+  background-repeat: no-repeat;
+  background-color: #feb8c8;
+  background-size: 24px;
+  border: none;
+  height: 48px;
+  margin: 0 8px;
+  box-shadow: var(--navigation-box-shadow);
+  border-radius: 50px;
+  width: 48px;
+  cursor: pointer;
+  outline: none;
+  background-color: var(--button-bg);
+  background-image: url(/Users/deepikauppalapati/Desktop/VonageASU/icons/share.png);
+  background-position: center;
+  background-color: #feb8c8;
+
+}
+.options{
+  background-repeat: no-repeat;
+  background-color: #feb8c8;
+  background-size: 24px;
+  border: none;
+  height: 48px;
+  margin: 0 8px;
+  box-shadow: var(--navigation-box-shadow);
+  border-radius: 50px;
+  width: 48px;
+  cursor: pointer;
+  outline: none;
+  background-color: var(--button-bg);
+  background-image: url(/Users/deepikauppalapati/Desktop/VonageASU/icons/658625-200.png);
+  background-position: center;
+  background-color: #feb8c8;
+
 }
 
 
@@ -400,6 +456,7 @@ body {
     transform: translateX(100%);
     z-index: 2;
     width: 100%;
+
   }
   .right-side.show {
     transform: translateX(0);
@@ -414,9 +471,8 @@ body {
   .left-side {
     display: none;
   }
-  .app-main {
-    padding: 50px 16px 16px 16px;
-  }
+
+
   .expand-btn {
     right: 16px;
   }
@@ -489,7 +545,7 @@ body, html {
   align-items: center;
   justify-content: center;
   padding: 20px;
-  border-radius: 0 0 10px 10px;
+  
   background-color: rgba(141, 26, 57, 255);
   margin: 0;
   color: white;
@@ -511,7 +567,7 @@ body, html {
 
 .app-container {
   position: relative;
-  top: 50px; /* Adjust the value as needed to move the content up */
+  top: 200px; /* Adjust the value as needed to move the content up */
 }
 
 
