--- a/style.css
+++ b/style.css
@@ -38,6 +38,8 @@ body {
   --message-text: #2c303a;
   --placeholder-text: #a2a4bc;
   --button-bg: #fff;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 100;
 }
 
 /*==================== LAYOUT ====================*/
@@ -45,7 +47,7 @@ body {
   background-color: var(--app-background);
   width: 100%;
   height: 100%;
-  font-family: 'DM Sans', sans-serif;
+  font-family: 'Arial', sans-serif;
   display: flex;
   transition: 0.2s;
 }
@@ -368,7 +370,7 @@ body {
   cursor: pointer;
   outline: none;
   background-color: var(--button-bg);
-  background-image: url(/Users/deepikauppalapati/Desktop/VonageASU/icons/record.png);
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' stroke='%232c303a' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-circle' viewBox='0 0 24 24'%3E%3Ccircle cx='12' cy='12' r='10'/%3E%3Ccircle cx='12' cy='12' r='6'/%3E%3C/svg%3E");
   background-position: center;
   background-color: #feb8c8;
 }
@@ -386,7 +388,7 @@ body {
   cursor: pointer;
   outline: none;
   background-color: var(--button-bg);
-  background-image: url(/Users/deepikauppalapati/Desktop/VonageASU/icons/share.png);
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' stroke='%232c303a' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-desktop' viewBox='0 0 24 24'%3E%3Crect x='1' y='2' width='22' height='20' rx='2' ry='2'/%3E%3Cline x1='5' y1='12' x2='19' y2='12'/%3E%3Cline x1='12' y1='5' x2='12' y2='19'/%3E%3C/svg%3E%0A");
   background-position: center;
   background-color: #feb8c8;
 
@@ -404,14 +406,11 @@ body {
   cursor: pointer;
   outline: none;
   background-color: var(--button-bg);
-  background-image: url(/Users/deepikauppalapati/Desktop/VonageASU/icons/658625-200.png);
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' stroke='%232c303a' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-more-horizontal' viewBox='0 0 24 24'%3E%3Ccircle cx='12' cy='12' r='1'/%3E%3Ccircle cx='19' cy='12' r='1'/%3E%3Ccircle cx='5' cy='12' r='1'/%3E%3C/svg%3E%0A");
   background-position: center;
   background-color: #feb8c8;
 
 }
-
-
-
 
 .expand-btn {
   position: absolute;
